# brick-monitor

./: .gitignore  AGENTS.md  LICENSE  README.md  github-release-plan.md  index.html  macos-release-review.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: PROGRESS.md  macos-release.md  开发计划.md
scripts/: verify-macos-signing-env.sh  verify-xcode-ready.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  error.rs  lib.rs  main.rs  permissions.rs
src-tauri/src/commands/: heartbeat.rs  keystroke.rs  mod.rs  salary.rs  settings.rs  system.rs
src-tauri/src/database/: mod.rs  operations.rs  schema.rs
src-tauri/src/keyboard/: key_classifier.rs  listener.rs  mod.rs
src-tauri/src/salary/: calculator.rs  mod.rs
src-tauri/src/window/: macos.rs  mod.rs  windows.rs
src/components/Dashboard/: index.tsx  styles.module.css
src/components/FloatingWidget/: HeartbeatGauge.tsx  index.tsx  styles.module.css
src/components/Settings/: MacosAccessPanel.tsx  PrivacySettings.tsx  SalaryForm.tsx  index.tsx  styles.module.css
src/hooks/: useKeystrokeStats.ts  useSalary.ts  useSettings.ts
src/lib/: tauri.ts
src/stores/: keystrokeStore.ts  salaryStore.ts  settingsStore.ts
src/styles/: global.css
src/types/: keystroke.ts  salary.ts  settings.ts  system.ts
