[package]
name = "brick-monitor"
version = "0.1.0"
description = "搬砖实时监控 - 程序员工作时长与收入追踪"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rdev = "0.5"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "winreg", "winnt", "handleapi"] }
window-vibrancy = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.9"
window-vibrancy = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
